@@ -1180,7 +1180,7 @@ class _TestBzrDir(bzrdir.BzrDirMeta1):
     def open_branch(self, unsupported=False):
         return self.test_branch
 
-    def cloning_metadir(self):
+    def cloning_metadir(self, require_stacking=False):
         return _TestBzrDirFormat()
 
 
